--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: My website
+title: n4m4rch Blogs Security
 subtitle: This is where I will tell my friends way too much about me
 ---
